include(${CMAKE_UTILS})
get_source_files(${CMAKE_CURRENT_LIST_DIR})
add_library(gfx ${SOURCE_FILES})
target_compile_definitions(gfx PRIVATE PROGRAM_NAME="LibGFX" PROGRAM_VERSION=0)
target_include_directories(gfx PUBLIC "${CMAKE_CURRENT_LIST_DIR}/inc")
target_include_directories(gfx PRIVATE "${CMAKE_CURRENT_LIST_DIR}/src")
target_link_libraries(gfx core stb_image)
add_vulkan_sdk(gfx TRUE)